[package]
name = "url-preview"
version = "0.4.0"
edition = "2021"
description = "High-performance URL preview generator for messaging and social media applications"
license = "MIT"
repository = "https://github.com/ZhangHanDong/url-preview"

[features]
default = ["reqwest/default"]
cache = ["dashmap"]
logging = ["tracing", "tracing-subscriber", "tracing-appender"]
github = []
twitter = []
full = ["cache", "logging", "github", "twitter"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"], default-features = false }
scraper = "0.17"
url = "2"
thiserror = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.1"
futures = "0.3"

# Optional dependencies
dashmap = { version = "6", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tracing-appender = { version = "0.2", optional = true }

[dev-dependencies]
colored = "2.0"
indicatif = "0.17"
tokio = { version = "1.28", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["async_tokio"] }
futures = "0.3.31"

[[bench]]
name = "single_preview_benchmark"
harness = false

[[bench]]
name = "bench_concurrent_processing"
harness = false

[[bench]]
name = "cache_benchmarks"
harness = false
