[package]
name = "url-preview"
version = "0.6.0"
edition = "2021"
description = "High-performance URL preview generator for messaging and social media applications"
license = "MIT"
repository = "https://github.com/ZhangHanDong/url-preview"

[features]
default = ["reqwest/default"]
cache = ["dashmap"]
logging = ["tracing", "tracing-subscriber", "tracing-appender"]
github = []
twitter = []
browser = ["jsonrpc-core", "jsonrpc-stdio-server", "base64"]
llm = ["schemars", "async-openai"]
claude-code = ["llm", "cc-sdk"]
full = ["cache", "logging", "github", "twitter", "browser", "llm"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"], default-features = false }
scraper = "0.17"
url = "2"
thiserror = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.1"
futures = "0.3"

# Optional dependencies
dashmap = { version = "6", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
tracing-appender = { version = "0.2", optional = true }

# Browser/MCP dependencies
jsonrpc-core = { version = "18", optional = true }
jsonrpc-stdio-server = { version = "18", optional = true }
base64 = { version = "0.21", optional = true }

# LLM dependencies
schemars = { version = "0.8", optional = true }
async-openai = { version = "0.23", optional = true }
cc-sdk = { path = "../rust-claude-code-api/claude-code-sdk-rs", optional = true }

[dev-dependencies]
colored = "2.0"
indicatif = "0.17"
tokio = { version = "1.28", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["async_tokio"] }
futures = "0.3.31"
clap = "4.0"

[[bench]]
name = "single_preview_benchmark"
harness = false

[[bench]]
name = "bench_concurrent_processing"
harness = false

[[bench]]
name = "cache_benchmarks"
harness = false
